<resources>
    <string name="app_name">MensaBuddy</string>
    <string name="title_activity_login">Mensa Buddy</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_start_matching">StartMatchingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- strings related to location -->
    <string name="lbl_you_are_at">YOU ARE AT</string>
    <string name="btn_get_location">GET MY LOCATION</string>
    <string name="btn_start_location_updates">START LOCATION UPDATES</string>
    <string name="btn_stop_location_updates">STOP LOCATION UPDATES</string>

    <!-- String related to MainActivity -->
    <string name="btn_confirm_canteen">Mensa wählen</string>

    <!-- Strings related to PersonalActivity -->
    <string name="ph_vorname">Vorname</string>
    <string name="ph_nachname">Nachname</string>
    <string name="ph_int1">Interesse 1</string>
    <string name="ph_int2">Interesse 2</string>
    <string name="ph_int3">Interesse 3</string>

    <!-- Strings related to MatchPresentationActivity -->
    <string name="btn_confirm_match">Annehmen</string>
    <string name="btn_reject_match">Ablehnen</string>
</resources>
