<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_personal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dev.app.mensabuddy.PersonalActivity">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputNachname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:id="@+id/fakultaetSpinner"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/fakultaetSpinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:id="@+id/inputInt1"
        android:hint="@string/ph_int1"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/inputInt1"
        android:layout_alignLeft="@+id/inputInt1"
        android:layout_alignStart="@+id/inputInt1"
        android:layout_marginTop="22dp"
        android:id="@+id/inputInt2"
        android:hint="@string/ph_int2"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/inputNachname"
        android:layout_below="@+id/inputVorname"
        android:layout_alignLeft="@+id/inputInt1"
        android:layout_alignStart="@+id/inputInt1"
        android:layout_marginTop="21dp"
        android:hint="@string/ph_nachname"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="21dp"
        android:id="@+id/inputVorname"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/inputNachname"
        android:layout_alignStart="@+id/inputNachname"
        android:hint="@string/ph_vorname"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="17dp"
        android:id="@+id/inputInt3"
        android:layout_below="@+id/inputInt2"
        android:layout_alignLeft="@+id/inputInt2"
        android:layout_alignStart="@+id/inputInt2"
        android:hint="@string/ph_int3"/>

    <Button
        android:text="Speichern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/saveProfilBtn" />

</RelativeLayout>
